<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.selection.SelectionActivity">

    <FrameLayout
        android:id="@+id/fab_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:transitionName="@string/fab_transition">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            app:backgroundTint="@color/bg_color"
            app:elevation="0dp" />

    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:alpha="0">


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_card_end_msg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:srcCompat="@drawable/ic_kitty" />

        <TextView
            android:id="@+id/tv_card_end_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_msg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_end" />

        <android.support.constraint.Group
            android:id="@+id/group_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="iv_end, tv_card_end_msg" />

        <TextView
            android:id="@+id/tv_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/error_fetch_msg"
            app:layout_constraintBottom_toTopOf="@+id/btn_retry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.h24.home24reviewapp.ui.customviews.AnimatedButtonView
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/retry"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_error_msg" />

        <android.support.constraint.Group
            android:id="@+id/group_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="tv_error_msg, btn_retry" />


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:padding="12dp"
            app:srcCompat="@drawable/ic_back" />

        <View
            android:id="@+id/progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/bg_oval_primary_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.h24.home24reviewapp.ui.customviews.AnimatedButtonView
            android:id="@+id/btn_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:elevation="10dp"
            android:text="@string/review"
            android:textColor="@color/textColorDark"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.h24.home24reviewapp.ui.customviews.AnimatedButtonView
            android:id="@+id/btn_like"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/ic_like"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_unlike" />

        <com.h24.home24reviewapp.ui.customviews.AnimatedButtonView
            android:id="@+id/btn_unlike"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/ic_unlike"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_like"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_back" />

        <com.h24.home24reviewapp.ui.customviews.StackView
            android:id="@+id/card_stack_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingBottom="40dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="20dp"
            app:layout_constraintBottom_toTopOf="@id/btn_like"
            app:layout_constraintTop_toBottomOf="@id/iv_back"
            app:scaleDiff="0.04"
            app:translationDiff="@dimen/card_stack_translation" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>